# robot-recover

./: CMakeLists.txt  README.md  package.xml
configs/: robot_config.yaml
include/: robot.h
include/controllers/: motor_controller.h  sensor_manager.h
launch/: robot_launch.launch
src/: main.cpp  robot.cpp
src/controllers/: motor_controller.cpp  sensor_manager.cpp
tests/: CMakeLists.txt  test_robot.cpp
